# blndr

./: .gitignore  README.md  main.py  pyproject.toml
blndr/: __init__.py  blndr.py  common.py  gas.py  plan.py
blndr/gas_model/: ideal.py  vanderwaals.py
doc/: hypotheses.md
